--- a/Bakalauras/Bakalauras/Pages/Mokytis/SolveTask.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Mokytis/SolveTask.cshtml
@@ -24,6 +24,12 @@
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                     </div>
                     <hr />
+                    <div>
+                        <label><b>Uždavinio sudėtingumas:</b> B</label>
+                        <br />
+                        <label><b>Uždavinys iš egzamino ?:</b> NE</label>
+                    </div>
+                    <hr />
 
                     <p>Su kuriomis \(a\) reikšmėmis lygtis \((a+4)x^2+6x-1=0\) turi vienintelį sprendinį?</p>
 
@@ -61,8 +67,15 @@
                             </div>
                         </div>
                     </div>
+                    <hr />
+                    <div class="row">
+                        <a class="btn btn-primary btn-lg te" style="margin-bottom: 15px; margin-left: 15px; margin-right: 15px;" asp-page="/Mokytis/SolveTask">Atsakyti </a>
+                        <a class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-page="/Mokytis/SolveTask">Nežinau </a>
+                    </div>
+
                 </div>
             </div>
+            <partial name="~/Pages/General/HelpPartial.cshtml" />
         </div>
     </div>
 </div>
