--- a/Bakalauras/Bakalauras/Pages/Mokytis/ThemeMenu.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Mokytis/ThemeMenu.cshtml
@@ -57,37 +57,7 @@
                     <button type="button" class="btn btn-primary btn-lg te" style="margin-bottom: 15px;">Kartoti </button>
                 </div>
             </div>
-
-        </div>
-
-        <div class="col-lg-9 mx-auto" style="margin-top: 15px;">
-
-            <div class="card">
-                <div class="container" style="margin-top: 15px;">
-                    <h2><i class="bi bi-info-circle"></i> Pagalba!</h2>
-                </div>
-                <hr />
-                <div class="container">
-                    <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-                </div>
-                <hr />
-                <div class="container">
-                    <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-                </div>
-                <hr />
-                <div class="container">
-                    <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-                </div>
-                <hr />
-                <div class="container">
-                    <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-                </div>
-                <hr />
-                <div class="container">
-                    <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-                </div>
-            </div>
-
+            <partial name="~/Pages/General/HelpPartial.cshtml" />
         </div>
     </div>
 </div>
