--- a/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand text-light" asp-area="" asp-page="/Index">Bakalauras</a>
+                <a class="navbar-brand text-light" asp-area="" asp-page="/Index">Matematika-Lengviau</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,10 +41,16 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Index">Temos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Mano uždaviniai</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Uzdaviniai/MyTaskList">Mano uždaviniai</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Mano testai</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Pasiekimai</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Administravimas</a>
                         </li>
                     </ul>
                 </div>
